# Trabalho-1-Metodos-Numericos

./: CMakeLists.txt  Makefile  README.md  aux_func.c  aux_func.h  mainInterface.c  mainui.glade~  mraizes  mraizes-gui  raizes.c  secante.c  secante.h  sinais.c  sinais.h  teste
Bibliotecas/GNUPlot/: Gnuplot - Comandos.html  criar.plot
Bibliotecas/GNUPlot/Gnuplot - Comandos_files/: api.js  cb=gapi.loaded_1  cb=gapi.loaded_2  cb=gapi.loaded_3  f.txt  fastbutton.html  googleapis.proxy.js  jot_min_view__es.js  js  overlay.css  platform.js  postmessageRelay.html  proxy.html  rpc_shindig_random.js  saved_resource.html  standard-css-rounders-ltr-ltr.css  xpc.html
Bibliotecas/GNUPlot/gnuplot-5.2.5/: Makefile  config.h  config.status
Bibliotecas/GNUPlot/gnuplot-5.2.5/config/: Makefile
Bibliotecas/GNUPlot/gnuplot-5.2.5/demo/: Makefile
Bibliotecas/GNUPlot/gnuplot-5.2.5/docs/: Makefile  alldoc2gih  allterm.h  checkdoc  doc2gih  doc2hlp  doc2ipf  doc2ms  doc2rnh  doc2rtf  doc2tex  gnuplot.gih
Bibliotecas/GNUPlot/gnuplot-5.2.5/m4/: Makefile
Bibliotecas/GNUPlot/gnuplot-5.2.5/man/: Makefile
Bibliotecas/GNUPlot/gnuplot-5.2.5/share/: Makefile
Bibliotecas/GNUPlot/gnuplot-5.2.5/src/: Makefile  bf_test  gnuplot_x11  timestamp.h
Bibliotecas/GNUPlot/gnuplot-5.2.5/term/: Makefile
Bibliotecas/GNUPlot/gnuplot-5.2.5/tutorial/: Makefile
Bibliotecas/GTK+/gtk+-3.22.0/: Makefile  config.h  config.lt  config.status  gail-3.0.pc  gdk-x11-3.0.pc  gtk+-unix-print-3.0.pc  gtk+-x11-3.0.pc  gtk-zip.sh  libtool
Bibliotecas/GTK+/gtk+-3.22.0/demos/: Makefile
Bibliotecas/GTK+/gtk+-3.22.0/docs/: Makefile
Bibliotecas/GTK+/gtk+-3.22.0/examples/: Makefile  action-namespace  builder  drawing  grid-packing  hello-world  plugman  search-bar  sunny  window-default
Bibliotecas/GTK+/gtk+-3.22.0/gdk/: Makefile  gdk.gresource.xml  gdkresources.c  libgdk-3.la  libgdk_3_la-gdk-private.lo  libgdk_3_la-gdk.lo  libgdk_3_la-gdkapplaunchcontext.lo  libgdk_3_la-gdkcairo.lo  libgdk_3_la-gdkcolor.lo  libgdk_3_la-gdkcursor.lo  libgdk_3_la-gdkdeprecated.lo  libgdk_3_la-gdkdevice.lo  libgdk_3_la-gdkdevicemanager.lo  libgdk_3_la-gdkdevicepad.lo  libgdk_3_la-gdkdevicetool.lo  libgdk_3_la-gdkdisplay.lo  libgdk_3_la-gdkdisplaymanager.lo  libgdk_3_la-gdkdnd.lo  libgdk_3_la-gdkgl.lo  (+26 more)
Bibliotecas/Glade/: glade-3.20.0.tar.xz
Interface/: main.c  mainui.glade~  teste
data/: newton.txt
include/: raizes.h  sinais.h
interface/: main.c  mainui.glade
src/: CMakeLists.txt  main.c  mainInterface.c  raizes.c  sinais.c
(+2166 files in other folders)
